Урок 3. Koin и корутины 1. Используйте в своем проекте Koin и Coroutines.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
         internet connection.
     </string>
     <string name="dialog_tittle_sorry">Sorry</string>
-
+    <string name="activity_exception">Sorry</string>
     <string name="error_stub">Error</string>
 
 
