Урок 4. Picasso/Glide, Room 2. Создайте экран с описанием слова. Используйте Picasso или Glide для загрузки изображения.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,7 @@
     <string name="activity_exception">Sorry</string>
     <string name="error_stub">Error</string>
 
+    <string name="image_stub">image</string>
+    <string name="menu_title_history">History</string>
 
 </resources>
